add about us page

--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -561,11 +561,11 @@ textarea.input {
 }
 
 .subnav .subnavbtn {
-  font-size: 13px;
+  font-size: 12px;
   border: none;
   outline: none;
   color: rgb(0, 0, 0);
-  padding: 3px 5px;
+  padding: 2px 5px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -599,10 +599,9 @@ textarea.input {
   background-color: #eee;
   color: black;
 }
-
-/* .maincontainer {
+ /* .container {
   padding-top: 132px;
-} 
+}  */
 /* .header-logo {
   float: left;
 } */
