create about us page

--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -588,7 +588,7 @@ textarea.input {
 }
 
 .subnav-content a {
-  color: white;
+  color: rgb(37, 34, 34);
   text-decoration: none;
   padding: 6px 6px;
   display: block;
