--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -92,7 +92,7 @@ Table OF Contents
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   font-weight: 400;
   color: #333;
 }
