--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -93,14 +93,15 @@ Table OF Contents
         10
     ); /* Text color on hover/focus to maintain readability */
 }
-.background {
-    background-color: #eae7dc;
-}
+
 body {
-    /* font-family: "Montserrat", sans-serif; */
-    /* font-weight: 400;
-    color: #333; */
+    /* font-family: "Montserrat", sans-serif; 
+     font-weight: 400;
+    color: #333;
+    background-color: #eae7dc; */
     background-color: #eae7dc;
+
+    margin-top: 160px;
 }
 /*
 h1,
