--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -2390,6 +2390,51 @@ textarea.input {
     width: 40px;
     height: 40px;
 }
+
+/*=========================================================
+	15 ->forms
+===========================================================*/
+
+.border {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+}
+.custom-form-style {
+    background-color: #ffffff;
+    border: 2px solid #e6e0e0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 8px; /* Optional: Adds rounded corners */
+}
+.preview-box img {
+    width: 100%;
+    height: auto;
+}
+
+.preview-box {
+    width: 100px;
+    height: 100px;
+    border: 2px dashed #060404;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+#map {
+    height: 500px;
+    width: 100%;
+    margin-top: 20px;
+}
+#search {
+    margin: 10px 0;
+    padding: 10px;
+    font-size: 14px;
+    width: 100%;
+    max-width: 300px;
+}
+
 /*=========================================================
 	13 -> RESPONSIVE
 ===========================================================*/
