--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -93,7 +93,6 @@ Table OF Contents
         10
     ); /* Text color on hover/focus to maintain readability */
 }
-
 body {
     /* font-family: "Montserrat", sans-serif; 
      font-weight: 400;
@@ -101,7 +100,17 @@ body {
     background-color: #eae7dc; */
     background-color: #eae7dc;
 
-    margin-top: 160px;
+    margin-top: 70px;
+}
+@media (min-width: 768px) {
+    body {
+        margin-top: 80px;
+    }
+}
+@media (min-width: 992px) {
+    body {
+        margin-top: 190px;
+    }
 }
 /*
 h1,
