--- a/public/assets/webpage/css/style.css
+++ b/public/assets/webpage/css/style.css
@@ -601,7 +601,7 @@ textarea.input {
     position: absolute;
     left: 0;
     background-color: rgb(173, 172, 164);
-    width: 100%;
+    width: 100% !important;
     z-index: 99;
 }
 
